--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
   <body>
     <h1>PyPy Wheels</h1>
     <p>
-      Use the following command to enable pypy binary wheels for ubuntu:
+      Use the following command to enable pypy binary wheels for linux:
     </p>
     <pre>
-      pip install --extra-index https://antocuni.github.io/pypy-wheels/ubuntu numpy
+      pip install -U pip
+      pip install --extra-index https://antocuni.github.io/pypy-wheels/manylinux2010 numpy
     </pre>
-    <a href="ubuntu">Wheels for ubuntu</a>
+    <a href="manylinux2010">List of manylinux wheels</a>
+    <a href="ubuntu">List of old, deprecated wheels for ubuntu</a>
+    <a href="https://github.com/antocuni/pypy-wheels/"> Main github repo</a>
   </body>
 </html>
