--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       pip install -U pip
       pip install --extra-index https://antocuni.github.io/pypy-wheels/manylinux2010 numpy
     </pre>
-    <a href="manylinux2010">List of manylinux wheels</a>
-    <a href="ubuntu">List of old, deprecated wheels for ubuntu</a>
-    <a href="https://github.com/antocuni/pypy-wheels/"> Main github repo</a>
+    <a href="manylinux2010">List of manylinux wheels</a> <br>
+    <a href="ubuntu">List of old, deprecated wheels for ubuntu</a> <br>
+    <a href="https://github.com/antocuni/pypy-wheels/"> Main github repo</a> <br>
   </body>
 </html>
